--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </header>
 
     </div>
-        <main max-w-md mx-auto px-4 mt-[200px] pb-10">
+        <main max-w-md mx-auto px-4 mt-[100px]">
 
             <div id="tab-bo" class="tab-content space-y-0">
                 <div class="bg-white p-5 rounded-3xl shadow-lg border-2 border-green-100 card-enter mb-8">
