--- a/index.html
+++ b/index.html
@@ -67,12 +67,15 @@
 
 <body>
 
-    <body class="pb-24">
+  <body class="pt-[190px]">
 
 <header
     class="fixed top-0 inset-x-0 z-50 bg-white/95 backdrop-blur-2xl border-b border-slate-200 pt-3 pb-2 px-4 shadow-md">
+
     <div class="max-w-md mx-auto">
+
         <div class="flex justify-between items-start mb-3">
+
             <div class="flex flex-col">
                 <h1 class="text-lg font-extrabold text-slate-700 leading-none">
                     Đi chơi Chùa Hương <span class="text-pink-500 italic font-black">20’26</span>
@@ -80,50 +83,60 @@
             </div>
 
             <div class="flex flex-col items-end gap-2">
+
                 <a href="tel:19001207"
                     class="bg-red-500 text-white px-3 py-1 rounded-full text-[9px] font-black shadow-lg shadow-red-200 animate-pulse active:scale-95 transition-all flex items-center gap-1">
                     🚨 SOS
                 </a>
 
                 <div class="flex flex-col items-end pr-2">
+
                     <div
                         class="flex items-center bg-white border border-slate-300 rounded-xl px-3 py-2 shadow-sm active:scale-95 transition">
+
                         <span class="text-sm mr-1">👥</span>
 
                         <input type="number" id="numPeople" value="1" min="1" oninput="calculateAll()"
                             class="w-12 text-center text-base font-semibold text-slate-700 bg-transparent outline-none">
 
                         <span class="text-xs font-semibold text-slate-400 ml-1">Người</span>
+
                     </div>
 
                     <p class="text-[10px] text-slate-400 mt-1 text-right">
                         💡 Nhập số người — chi phí bên dưới sẽ tự động cập nhật
                     </p>
+
                 </div>
 
             </div>
+
         </div>
 
         <div class="flex bg-slate-100 p-1 rounded-2xl gap-1 border border-slate-200">
+
             <button onclick="switchTab('bo', this)"
                 class="tab-btn flex-1 py-2.5 rounded-xl text-[11px] font-black transition-all tab-active text-white uppercase shadow-sm">
                 🥾 Đi Bộ
             </button>
+
             <button onclick="switchTab('cap', this)"
                 class="tab-btn flex-1 py-2.5 rounded-xl text-[11px] font-bold text-slate-500 transition-all uppercase">
                 🚠 Cáp Treo
             </button>
+
             <button onclick="switchTab('full', this)"
                 class="tab-btn flex-1 py-2.5 rounded-xl text-[11px] font-bold text-slate-500 transition-all uppercase">
                 🔥 3 Tuyến
             </button>
+
         </div>
+
     </div>
+
 </header>
 
-    </div>
-        <main max-w-md mx-auto px-4 mt-[100px]">
-
+<main class="max-w-md mx-auto px-4">
             <div id="tab-bo" class="tab-content space-y-0">
                 <div class="bg-white p-5 rounded-3xl shadow-lg border-2 border-green-100 card-enter mb-8">
                     <h3 class="font-bold text-green-800 text-sm mb-3 flex items-center gap-2">💰 Dự tính phí (Team Đi
